--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -41,33 +41,48 @@
     </nav>
     <div>
       <h2>Pisco Sour</h2>
-      <h3>Denominacion de origen</h3>
-      <p>
-        El pisco es un aguardiente de uva, elaborado en las regiones de Atacama
-        y Coquimbo, en Chile. Fue delimitado como Denominación de Origen en 1931
-        y representa la más exitosa Denominacion de origen del Cono Sur de América, con positivos
-        efectos sociales y territoriales.
-      </p>
+      <div class="row">
+        <div class="col-sm-6">
+          <h3>Denominacion de origen</h3>
+          <p>
+            El pisco es un aguardiente de uva, elaborado en las regiones de Atacama
+            y Coquimbo, en Chile. Fue delimitado como Denominación de Origen en 1931
+            y representa la más exitosa Denominacion de origen del Cono Sur de América, con positivos
+            efectos sociales y territoriales.
+          </p>
+        </div>
+        <div class="col-sm-6">
+          <img src="../Recursos/Imagenes/PiscoSour.jpg" alt="Pisco sour">
+        </div>
+      </div>
+
+
     </div>
     <!--Table-->
-    <div>
-     
+    <div class="container mt-3">
+      <h2>Materiales</h2>
       <table class="table table-bordered">
-        <tr>
-          <th>Receta</th>
-          <th>Destilado</th>
-          <th>Ingredientes</th>
-          <th>Cristaleria</th>
-          <th>Metodo</th>
-        </tr>
-        <td>Pisco Sour</td>
-        <td>Pisco</td>
-        <td>Limon sutil, Jarabe de goma</td>
-        <td>Copa flauta</td>
-        <td>Batido</td>
+        <thead>
+          <tr>
+            <th>Receta</th>
+            <th>Destilado</th>
+            <th>Ingredientes</th>
+            <th>Cristileria</th>
+            <th>Metodo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Pisco Sour</td>
+            <td>Pisco</td>
+            <td>Limon sutil, Jarabe de goma</td>
+            <td>Copa flauta</td>
+            <td>Batido</td>
+          </tr>
+        </tbody>
       </table>
     </div>
-     <!--Table-->
+    <!--Table-->
     <div>
       <h2>Ingredientes</h2>
       <ul>
