--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
         <img src="Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
-          </li>
-        </ul>
+        <div class="dropdown">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+            Menu
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Inicio</a></li>
+            <li><a class="dropdown-item" href="Paginas/quieneSomos.html">¿Quienes somos?</a></li>
+            <li><a class="dropdown-item" href="Paginas/contacto.html">Contacto y sugerencias</a></li>
+          </ul>
+        </div>
       </div>
     </nav>
     <div class="row">
@@ -75,12 +74,12 @@
       </div>
 
       <div class="col-sm-6">
-        <img class="img-fluid" src="/Recursos/Imagenes/Barman.jpg" alt="Barman" />
+        <img class="img-fluid" src="Recursos/Imagenes/Barman.jpg" alt="Barman" />
       </div>
     </div>
     <div class="row py-3">
       <div class="col-sm-6">
-        <img class="img-fluid" src="/Recursos/Imagenes/mixologia.jpg" alt="mixologia" />
+        <img class="img-fluid" src="Recursos/Imagenes/mixologia.jpg" alt="mixologia" />
       </div>
       <div class="col-sm-6">
         <h2>¿Que es la mixología?</h2>
