--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -25,16 +25,16 @@
   <div class="container">
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-        <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+        <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">¿Quienes somos?</a>
+            <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
+            <a class="nav-link" href="#">Contacto y sugerencias</a>
           </li>
         </ul>
       </div>
@@ -60,15 +60,17 @@
       </div>
       <div class="row">
         <div class="col-6">
-          <div class="dropdown">
-            <button type="button" class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown">
-              Seleccione su Genero
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Masculino</a></li>
-              <li><a class="dropdown-item" href="#">Femenino</a></li>
-              <li><a class="dropdown-item" href="#">Otro</a></li>
-            </ul>
+          <div class="form-check">
+            <input type="radio" class="form-check-input" id="radio1" name="optradio" value="masculino">
+            <label class="form-check-label" for="radio1">Masculino</label>
+          </div>
+          <div class="form-check">
+            <input type="radio" class="form-check-input" id="radio2" name="optradio" value="femenino">
+            <label class="form-check-label" for="radio2">Femenino</label>
+          </div>
+          <div class="form-check">
+            <input type="radio" class="form-check-input" id="radio3" name="optradio" value="otro">
+            <label class="form-check-label" for="radio2">Otro</label>
           </div>
         </div>
         <div class="col-6">
@@ -87,16 +89,16 @@
     <footer>
       <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
-          <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+          <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">¿Quienes somos?</a>
+              <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contacto y sugerencias</a>
+              <a class="nav-link" href="#">Contacto y sugerencias</a>
             </li>
           </ul>
         </div>
