--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -26,10 +26,10 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-        <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+        <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">¿Quienes somos?</a>
@@ -49,10 +49,10 @@
     <footer>
       <nav class="navbar navbar-expand-sm">
         <div class="container-fluid">
-          <img src="/Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+          <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/index.html">Inicio</a>
+              <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">¿Quienes somos?</a>
