--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -40,30 +40,39 @@
       </div>
     </nav>
     <div>
-      <h2>Mojito</h2>
+      <div class="row py-4">
+        <div class="col-sm-6">
+          <h2>Mojito</h2>
 
-      <img src="../Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
-
-      <h3>Denominacion de origen</h3>
-      <p>
-        En la actualidad, solamente cuatro países tienen una denominación de origen para el ron en el Caribe, con
-        nombres
-        distintos, pero un mismo fin. Estos países son: Cuba, Guatemala, Martinica y Venezuela.
-      </p>
-      <h3>Origen</h3>
-      <p>
-        Origen del mojito. Hablamos de Cuba
-        Cuba es sin duda alguna la cuna del mojito, a pesar de que el origen exacto de este cóctel clásico es siempre
-        objeto de debate. Una de las historias cuentan que el mojito se remonta al siglo XVI, se cree que sus raíces se
-        remontan incluso al año 1586, cuando un grupo de piratas lo llamaban «El Draque«, en honor al pirata inglés y
-        comerciante de esclavos Francis Drake.
-      </p>
-      <p>
-        Sea cual fuere el origen de su nombre, el mojito se hacía con tafia, un predecesor primitivo del ron, un
-        aguardiente de caña, usando los otros ingredientes para disimular su gusto áspero. No hay duda de que la bebida
-        mejoró sustancialmente durante el siglo XIX, con la introducción de alambiques de cobre y el proceso de
-        añejamiento que desembocó en la forma moderna del ron.
-      </p>
+          <h3>Denominacion de origen</h3>
+          <p>
+            En la actualidad, solamente cuatro países tienen una denominación de origen para el ron en el Caribe, con
+            nombres
+            distintos, pero un mismo fin. Estos países son: Cuba, Guatemala, Martinica y Venezuela.
+          </p>
+          <h3>Origen</h3>
+          <p>
+            Origen del mojito. Hablamos de Cuba
+            Cuba es sin duda alguna la cuna del mojito, a pesar de que el origen exacto de este cóctel clásico es
+            siempre
+            objeto de debate. Una de las historias cuentan que el mojito se remonta al siglo XVI, se cree que sus raíces
+            se
+            remontan incluso al año 1586, cuando un grupo de piratas lo llamaban «El Draque«, en honor al pirata inglés
+            y
+            comerciante de esclavos Francis Drake.
+          </p>
+          <p>
+            Sea cual fuere el origen de su nombre, el mojito se hacía con tafia, un predecesor primitivo del ron, un
+            aguardiente de caña, usando los otros ingredientes para disimular su gusto áspero. No hay duda de que la
+            bebida
+            mejoró sustancialmente durante el siglo XIX, con la introducción de alambiques de cobre y el proceso de
+            añejamiento que desembocó en la forma moderna del ron.
+          </p>
+        </div>
+        <div class="col-sm-6">
+          <img src="../Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
+        </div>
+      </div>
     </div>
     <div>
       <table class="table table-bordered">
