--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -40,9 +40,9 @@
       </div>
     </nav>
     <div>
-      <h2>Pisco Sour</h2>
-      <div class="row">
+      <div class="row py-4">
         <div class="col-sm-6">
+          <h2>Pisco Sour</h2>
           <h3>Denominacion de origen</h3>
           <p>
             El pisco es un aguardiente de uva, elaborado en las regiones de Atacama
