--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <h5>Preparaciones con Pisco</h5>
           <div class="card-body">
             <ul class="list-group">
-              <li><a href="Paginas/PiscoSour.html">Pisco</a></li>
+              <li><a href="Paginas/piscoSour.html">Pisco</a></li>
               <li>Pisco Sour Peruano</li>
               <li>Chilcano</li>
             </ul>
