--- a/Paginas/mojito.html
+++ b/Paginas/mojito.html
@@ -70,7 +70,7 @@
           </p>
         </div>
         <div class="col-sm-6">
-          <img src="../Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
+          <img class="img-fluid" src="../Recursos/Imagenes/Mojito.jpg" alt="Probl emas al cargar imagen">
         </div>
       </div>
     </div>
