--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <ul class="list-group">
               <li>Manhattan</li>
               <li>Rusty Nail</li>
-              <li>Old Fashioned</li>
+              <li><a href="Paginas/oldFashioned.html">Old Fashioned</a></li>
             </ul>
           </div>
         </div>
