--- a/Paginas/oldFashioned.html
+++ b/Paginas/oldFashioned.html
@@ -57,6 +57,15 @@
                         E. Pepper, este barman sería quien llevó la receta del Old Fashioned al bar el Waldorf-Astoria
                         Hotel en Nueva York.
                     </p>
+                    <h3>Curiosidades</h3>
+                    <p>
+                        * Las recetas más antiguas usaban jarabe o almíbar en lugar de terrones.
+                    </p>
+                    <p>
+                        * Las cortezas de naranja y limón que se suelen usar a modo de adorno (incluso una cereza al
+                        marrasquino) al parecer fueron añadidos que se usaban en la época de ‘La Ley seca’ (1920-1933)
+                        para ‘disimular’ las bebidas alcohólicas y que parecieran como refrescos de frutas.
+                    </p>
                 </div>
                 <div class="col-sm-6">
                     <img class="img-fluid" src="../Recursos/Imagenes/oldfashioned.jpg" alt="oldFashioned">
@@ -96,30 +105,34 @@
                     <li>1 a 3 gotas de amargo de angostura</li>
                     <li>Cubos de hielo que cubran la mitad del vaso</li>
                     <li>vaso roca o corto</li>
-    
-                <h2>Preparación</h2>
-                <ol>
-                    <li>
-                        *.- Previo a la preparación decir que la soda o sifón no es lo exactamente lo mismo que la gaseosa. Es
-                        barato y fácil de encontrar, si quieres preparar un auténtico cóctel Old Fashioned lo ideal es el
-                        sifón.
-                    </li>
-                    <li>
-                        1.- Comenzamos con la receta: en un vaso añade un el terrón de azúcar y un chorrito de Angostura, deja reposar 2 minutos.
-                    </li>
-                    <li>
-                        2.- Llenar el vaso de soda o sifón, dependiendo el tamaño del vaso unos 150 ml aproximadamente.
-                    </li>
-                    <li>
-                        3.- Añade el whisky y remueve para disolver el azúcar.
-                    </li>
-                    <li>
-                        4.- Decorar con las cortezas de cítricos.
-                    </li>
-                    <li>
-                        5.- A disfrutar
-                    </li>
-                </ol>
+
+                    <h2>Preparación</h2>
+                    <ol>
+                        <li>
+                            *.- Previo a la preparación decir que la soda o sifón no es lo exactamente lo mismo que la
+                            gaseosa. Es
+                            barato y fácil de encontrar, si quieres preparar un auténtico cóctel Old Fashioned lo ideal
+                            es el
+                            sifón.
+                        </li>
+                        <li>
+                            1.- Comenzamos con la receta: en un vaso añade un el terrón de azúcar y un chorrito de
+                            Angostura, deja reposar 2 minutos.
+                        </li>
+                        <li>
+                            2.- Llenar el vaso de soda o sifón, dependiendo el tamaño del vaso unos 150 ml
+                            aproximadamente.
+                        </li>
+                        <li>
+                            3.- Añade el whisky y remueve para disolver el azúcar.
+                        </li>
+                        <li>
+                            4.- Decorar con las cortezas de cítricos.
+                        </li>
+                        <li>
+                            5.- A disfrutar
+                        </li>
+                    </ol>
             </div>
             <div class="col sm-6">
                 <img class="img-fluid" src="../Recursos/Imagenes/oldfashioned2.jpg" alt="old Fashioned">
