--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h5>Preparaciones con Vodka</h5>
           <div class="card-body">
             <ul class="list-group">
-              <li>moscow mule</li>
+              <li>Moscow mule</li>
               <li>Caipiroska</li>
               <li>Cosmopolitan</li>
             </ul>
