--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -6,11 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> 
   <!-- Mis Estilos -->
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>Contacto</title>
@@ -40,15 +36,16 @@
       </div>
     </nav>
 
-    <form action="">
+    <form action="" class="" method="POST" onsubmit="return validarDatos()">
       <div class="row">
         <div class="col-6">
           <h5>Datos de Contacto</h5>
           <input type="text" class="form-control mb-4" name="Nombre" id="nombre" placeholder="Nombre" required />
+          <p class="text-danger" style="display:none" id="errorNombre">El largo del nombre debe ser superior a 3 </p>
           <input type="text" class="form-control mb-4" name="Apellido" id="apellido" placeholder="Apellido" required />
           <input type="email" class="form-control mb-4" name="Email" id="email" placeholder="Email" required />
-          <input type="number" class="form-control mb-4" name="age" id="edad" min="18" max="100" placeholder="Edad"
-            required />
+          <input type="number" class="form-control mb-4" name="age" id="edad" placeholder="Edad" required />
+          <p class="text-danger" style="display:none" id="errorEdad">No cumple con la edad minima</p>
         </div>
         <div class="col-6">
           <h5>Direccion</h5>
@@ -106,19 +103,11 @@
     </footer>
   </div>
 </body>
-<script>
-  function validarDatos(){
-    nombre = document.getElementById("nombre").value 
-    apellido = document.getElementById("apellido").value
-    email = document.getElementById("email").value
-    edad = document.getElementById("edad").value
-    calle = document.getElementById("calle").value 
-    numero = document.getElementById("numero").value 
-    comuna = document.getElementById("comuna").value 
-    region = document.getElementById("region").value 
-    mensaje = "Nombre:"+ nombre + "Apellido:"+ apellido + "Email:"+ email +"Edad:"+ edad + "Calle:" + calle + "Numero:" + numero + "Comuna:" + comuna + "Region:" + region
-    console.log(mensaje)
-  }
-</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="../Recursos/Elementos/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 
 </html>
