Tabla de compra de cocteles

--- a/Paginas/oldFashioned.html
+++ b/Paginas/oldFashioned.html
@@ -26,6 +26,9 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="cocteles.html">Comprar</a>
+                      </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
                     </li>
                     <li class="nav-item">
@@ -149,6 +152,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cocteles.html">Comprar</a>
+                              </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
                             </li>
