--- a/Paginas/piscoSour.html
+++ b/Paginas/piscoSour.html
@@ -31,6 +31,9 @@
             <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="cocteles.html">Comprar</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
           </li>
           <li class="nav-item">
@@ -116,6 +119,9 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cocteles.html">Comprar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
