--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -15,11 +15,6 @@
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>¿Quienes somos?</title>
 </head>
-<!--Pendientes
-  - pagina completa pendiente
-  -
-  -
--->
 
 <body>
   <div class="container">
@@ -30,6 +25,9 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="cocteles.html">Comprar</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">¿Quienes somos?</a>
@@ -53,6 +51,9 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cocteles.html">Comprar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">¿Quienes somos?</a>
