--- a/index.html
+++ b/index.html
@@ -15,30 +15,29 @@
   <link rel="stylesheet" href="Recursos/Elementos/Estilos.css" />
   <title>Cocktail Factory</title>
 </head>
-<!--Pendientes
-  - 
-  - 
-  -
--->
 
 <body>
 
-  
+
 
   <div class="container">
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-        <img src="Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
-        <div class="dropdown">
-          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-            Menu
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Inicio</a></li>
-            <li><a class="dropdown-item" href="Paginas/quieneSomos.html">¿Quienes somos?</a></li>
-            <li><a class="dropdown-item" href="Paginas/contacto.html">Contacto y sugerencias</a></li>
-          </ul>
-        </div>
+        <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+        <ul class="navbar-nav padding-left">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Paginas/cocteles.html">Comprar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Paginas/contacto.html">Contacto y sugerencias</a>
+          </li>
+        </ul>
       </div>
     </nav>
     <div class="row">
@@ -189,6 +188,9 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Paginas/cocteles.html">Comprar</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Paginas/quieneSomos.html">¿Quienes somos?</a>
