--- a/Paginas/cocteles.html
+++ b/Paginas/cocteles.html
@@ -22,6 +22,9 @@
                         <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#">Comprar</a>
+                      </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
                     </li>
                     <li class="nav-item">
@@ -31,21 +34,24 @@
             </div>
         </nav>
     </div>
-    
-    <button onclick="obtenerDatos()">LLAMAR FUNCION</button>
-
-    <div class="container">
+    <div class="container fluid">
+    <div class="row py-4">
+        <h2 class="col-9">Variedad de cocteles que tenemos</h2>
+        <a class ="col-3" href="https://api.whatsapp.com/send?phone=0123456789"><h5>Puedes hacer tu pedido por WhatsApp</h5></a>
+    </div>
+</div>
+    <div class="container fluid">
         <div class="table-responsive">
             <table class="table table-bordered" id="tabla-cocteles">
                 <tr class="table-striped">
+                    <th class="prc-25">N°</th>
                     <th class="prc-25">Cocktail</th>
                     <th class="prc-25">Ingredientes</th>
-                    <th class="prc-25">Dificultad</th>
                     <th class="prc-25">Precio</th>
 
                 </tr>
             </table>
-        </div>
+        </div>        
         <div>
             <footer>
                 <nav class="navbar navbar-expand-sm">
@@ -55,6 +61,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="../index.html">Inicio</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Comprar</a>
+                              </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
                             </li>
