--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-        <img src="../Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
+        <img src="Recursos/Imagenes/BANNERCF.png" alt="Problemas al cargar imagen" width="400" />
         <ul class="navbar-nav padding-left">
           <li class="nav-item">
             <a class="nav-link" href="#">Inicio</a>
