--- a/Paginas/cocteles.html
+++ b/Paginas/cocteles.html
@@ -44,11 +44,9 @@
         <div class="table-responsive">
             <table class="table table-bordered" id="tabla-cocteles">
                 <tr class="table-striped">
-                    <th class="prc-25">N°</th>
-                    <th class="prc-25">Cocktail</th>
-                    <th class="prc-25">Ingredientes</th>
-                    <th class="prc-25">Precio</th>
-
+                    <th>Cocktail</th>
+                    <th>Ingredientes</th>
+                    <th>Precio</th>
                 </tr>
             </table>
         </div>        
