--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </ul>
       </div>
     </nav>
+    <button onclick="llamarMensaje()">llamarMensaje</button>
     <div class="row">
       <div class="col-sm-6">
         <h1>Nuestro proposito</h1>
@@ -202,5 +203,8 @@
   </div>
   </div>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="/Recursos/Elementos/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
