--- a/Paginas/quieneSomos.html
+++ b/Paginas/quieneSomos.html
@@ -67,5 +67,8 @@
     </footer>
   </div>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="../Recursos/Elementos/function.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
