--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
       </div>
     </nav>
-    <button onclick="llamarMensaje()">llamarMensaje</button>
+    <button type="button" onclick="llamarMensaje()">llamarMensaje</button>
     <div class="row">
       <div class="col-sm-6">
         <h1>Nuestro proposito</h1>
@@ -207,4 +207,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="/Recursos/Elementos/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </html>
