--- a/Paginas/cocteles.html
+++ b/Paginas/cocteles.html
@@ -12,7 +12,7 @@
     <title>Cocteles</title>
 </head>
 
-<body>
+<body onload="mayorEdad()">
     <div>
         <nav class="navbar navbar-expand-sm">
             <div class="container-fluid">
@@ -23,7 +23,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Comprar</a>
-                      </li>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
                     </li>
@@ -35,11 +35,13 @@
         </nav>
     </div>
     <div class="container fluid">
-    <div class="row py-4">
-        <h2 class="col-9">Variedad de cocteles que tenemos</h2>
-        <a class ="col-3" href="https://api.whatsapp.com/send?phone=0123456789"><h5>Puedes hacer tu pedido por WhatsApp</h5></a>
+        <div class="row py-4">
+            <h2 class="col-9">Variedad de cocteles que tenemos</h2>
+            <a class="col-3" href="https://api.whatsapp.com/send?phone=0123456789">
+                <h5>Puedes hacer tu pedido por WhatsApp</h5>
+            </a>
+        </div>
     </div>
-</div>
     <div class="container fluid">
         <div class="table-responsive">
             <table class="table table-bordered" id="tabla-cocteles">
@@ -49,7 +51,7 @@
                     <th>Precio</th>
                 </tr>
             </table>
-        </div>        
+        </div>
         <div>
             <footer>
                 <nav class="navbar navbar-expand-sm">
@@ -61,7 +63,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Comprar</a>
-                              </li>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="quieneSomos.html">¿Quienes somos?</a>
                             </li>
