--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" /> 
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <!-- Mis Estilos -->
   <link rel="stylesheet" href="../Recursos/Elementos/Estilos.css" />
   <title>Contacto</title>
@@ -50,7 +50,8 @@
           <input type="email" class="form-control mb-4" name="Email" id="email" placeholder="Email" required />
           <p class="text-warning" style="display:none" id="errorEmail">Ingresar un mail valido </p>
           <input type="number" class="form-control mb-4" name="age" id="edad" placeholder="Edad" required />
-          <p class="text-warning" style="display:none" id="errorEdad">Debes ser mayor de 18 años para poder suscribirte</p>
+          <p class="text-warning" style="display:none" id="errorEdad">Debes ser mayor de 18 años para poder suscribirte
+          </p>
         </div>
         <div class="col-6">
           <h5>Direccion</h5>
@@ -81,7 +82,9 @@
             <label class="form-check-label">Deseo recibir correos con anuncios de la pagina</label>
 
           </div>
-          <button class="btn btn-secondary" type="button" onclick="validarDatos()">Enviar</button>
+          <div class="" id="box-send">
+            <button class="btn btn-secondary" type="button" onclick="validarDatos()">Enviar</button>
+          </div>
         </div>
       </div>
 
